{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Touch",
            "id": "94b83e5e-f18f-48d0-8a6e-f4dc86b6b352",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "0f5d90f1-8cb8-40a9-86b2-62f93c83b2c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "dcbbe4a7-3cf2-4dea-bba5-b3ef9526fa05",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "599c74ef-031d-4b14-80b0-ee4050eacb60",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e0581e5-cdcb-4b5e-b566-3a71e2a12d4d",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "793621b3-2a6f-4e2a-968b-6cbf1127deb1",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "93ab77f3-35c6-4e7b-a35d-35c876588adf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "183306b9-550d-4d3e-9d87-d29ab546ff35",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "46362ce5-5684-4a3b-91e9-23cc3f148ea9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dc5686cb-fcce-4a04-9229-4cb5d86a619e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "45a6a0c3-a5c2-4a25-8fc6-7a59995ad8fa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c89ed90a-f64f-421a-b3c1-b5f59c4afc43",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}